--- a/Changelog
+++ b/Changelog
@@ -16,6 +16,11 @@ ownCloud Contacts Changelog
  - Regression fixed: Contacts can be moved between address books again; also with different backends. contacts#57
 
 5.0.7:
+ - Feature: Delete button for single contacts in list. contacts#101
+ - Improvement: Cut ~40% off of initial rendering time.
+ - Fix: Thumbnail was not updated when changing PHOTO via CardDAV. contacts#120
+ - Fix: Drag item only worked on first drag. contacts#33
+ - Fix: The internal client side value for BDAY was malformed after adding a birthday. contacts#104
  - Fix: URL and EMAIL event handlers reenabled: contacts#109
  - Fix: Send correct lastModified. contacts#48 contacts#99
  - Fix: Don't keep attaching event handler for uploaded photo. contacts#24
