--- a/Changelog
+++ b/Changelog
@@ -11,6 +11,7 @@ ownCloud Contacts Changelog
  - Abstraction layer for address books and contacts.
  - Partially ported to App Framework.
  - Use updated app styles.
+ - Select single contacts by Ctrl/Cmd-click, or a range of contacts by Shift-click.
  - Experimental contacts merge. Might eat kittens!
  - Regression fixed: Address book rename added again.
  - Regression fixed: Contacts can be moved between address books again; also with different backends. contacts#57
