Added confirmation for deleting a addressbook #769
https://github.com/owncloud/contacts/issues/769

--- a/l10n/en_GB.json
+++ b/l10n/en_GB.json
@@ -271,6 +271,7 @@
     "Base DN modification" : "Base DN modification",
     "Connector" : "Connector",
     "Connector value (Better use external editor and copy/paste)" : "Connector value (Better use external editor and copy/paste)",
-    "Copy from (Warning, replaces current custom value)" : "Copy from (Warning, replaces current custom value)"
+    "Copy from (Warning, replaces current custom value)" : "Copy from (Warning, replaces current custom value)",
+    "Delete address book":"Delete address book"  
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
